--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "Masarap Ba",
     "slug": "masarapba",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "orientation": "portrait",
     "icon": "./assets/masarapbaicon.png",
     "userInterfaceStyle": "light",
@@ -16,7 +16,8 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.razel.masarapba"
+      "bundleIdentifier": "com.razel.masarapba", 
+      "buildNumber": "1.0.1"
     },
     "android": {
       "adaptiveIcon": {
@@ -24,7 +25,7 @@
         "backgroundColor": "#ffffff"
       },
       "package": "com.razel.masarapba",
-      "versionCode": 1000
+      "versionCode": 1001
     },
     "web": {
       "favicon": "./assets/favicon.png"
