--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "Masarap Ba",
     "slug": "masarapba",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "orientation": "portrait",
     "icon": "./assets/masarapbaicon.png",
     "userInterfaceStyle": "light",
@@ -17,7 +17,7 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.razel.masarapba", 
-      "buildNumber": "1.0.1"
+      "buildNumber": "1.0.2"
     },
     "android": {
       "adaptiveIcon": {
@@ -25,10 +25,10 @@
         "backgroundColor": "#ffffff"
       },
       "package": "com.razel.masarapba",
-      "versionCode": 1001
+      "versionCode": 1002
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/masarapbaicon.png"
     },
     "extra": {
       "eas": {
